fix comment delete button alignment and comment delete redirect

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -131,6 +131,13 @@ tbody tr:last-of-type {
     float: none;
 }
 
+.trash{
+    display: inline;
+    float: none;
+    height: 30px;
+    width: 40px;
+}
+
 .main_page {
     /* The image used */
   background-image: url("teal_shore.jpg");
@@ -144,4 +151,7 @@ tbody tr:last-of-type {
   background-repeat: no-repeat;
   background-size: cover;
 
+}
+.question{
+    text-align: center;
 }
